Disable VT risk engine when Java version/setting does not apply
Signed-off-by: Martin Bartoš <mabartos@redhat.com>