@@ -21,11 +21,16 @@ import io.github.mabartos.spi.engine.RiskEngine;
 import io.github.mabartos.spi.engine.RiskEngineFactory;
 import org.keycloak.models.KeycloakSession;
 import org.keycloak.models.KeycloakSessionFactory;
+import org.keycloak.provider.EnvironmentDependentProviderFactory;
 
 /**
  * Creates risk engine with the virtual threads support
+ * <p>
+ * This factory requires Java 21+ with --enable-preview flag, or Java 23+ without the flag.
+ * The StructuredTaskScope API used by DefaultVTRiskEngine is a preview feature in Java 21-22
+ * and becomes stable in Java 23+.
  */
-public class DefaultVTRiskEngineFactory implements RiskEngineFactory {
+public class DefaultVTRiskEngineFactory implements RiskEngineFactory, EnvironmentDependentProviderFactory {
     public static final String PROVIDER_ID = "default-vt";
 
     @Override
@@ -54,5 +59,33 @@ public class DefaultVTRiskEngineFactory implements RiskEngineFactory {
     @Override
     public void close() {
 
+    }
+
+    @Override
+    public boolean isSupported(Config.Scope config) {
+        try {
+            Runtime.Version javaVersion = Runtime.version();
+            int majorVersion = javaVersion.feature();
+
+            // StructuredTaskScope requires Java 21+ with --enable-preview, or Java 23+ without it
+            if (majorVersion < 21) {
+                return false;
+            }
+
+            // For Java 21-22, check if preview features are enabled
+            if (majorVersion < 23) {
+                // Check if StructuredTaskScope class is available (preview feature in Java 21-22)
+                // This will only be available if --enable-preview flag is set
+                try {
+                    Class.forName("java.util.concurrent.StructuredTaskScope");
+                    return true;
+                } catch (ClassNotFoundException e) {
+                    return false;
+                }
+            }
+            return true;
+        } catch (Exception e) {
+            return false;
+        }
     }
 }
